@@ -10,6 +10,7 @@ module HSE.All(
 
 import Util
 import CmdLine
+import Data.List
 import Data.Maybe
 import HSE.Util
 import HSE.Evaluate
@@ -37,6 +38,7 @@ parseFlagsNoLocations x = x{cppFlags = case cppFlags x of Cpphs y -> Cpphs $ f y
 
 runCpp :: CppFlags -> FilePath -> String -> IO String
 runCpp NoCpp _ x = return x
+runCpp CppSimple _ x = return $ unlines [if "#" `isPrefixOf` ltrim x then "" else x | x <- lines x]
 runCpp (Cpphs o) file x = runCpphs o file x
 
 
