@@ -1,0 +1,1 @@
+--cpp-simple tests/cpp-simple.hs
