@@ -1,0 +1,3 @@
+#include "Any/File.h"
+
+main = print "Hello"
