@@ -19,6 +19,7 @@ HLint v0.0, (C) Neil Mitchell 2006-2010
   -q        --quiet                    Supress most console output
             --cpp-define=name[=value]  CPP #define
             --cpp-include=dir          CPP include path
+            --cpp-simple               Use a simple CPP (strip # lines)
 
 HLint gives hints on how to improve Haskell code.
 
